後臺成功連接上，修改今天的問題。

--- a/src/components/ActPrize.astro
+++ b/src/components/ActPrize.astro
@@ -28,7 +28,7 @@
         <div class="actprize__image">
           <img src="/image/LINE500.png" alt="LINE500" />
         </div>
-        <h4 class="actprize__name">LINE POINS 500 點</h4>
+        <h4 class="actprize__name">LINE POINTS 500 點</h4>
         <p class="actprize__quantity">30名</p>
       </div>
 
